--- a/templates/home.html
+++ b/templates/home.html
@@ -4,5 +4,9 @@
     </head>
     <body>
       <h1> Sports Eventer </h1>
+      <header>
+        <a href="/register">Register</a>
+        <a href="/login">Log In</a>
+      </header>
     </body>
 </html>
