Using a better method for DB connection. Started working on the EVENT.

--- a/templates/home.html
+++ b/templates/home.html
@@ -7,6 +7,7 @@
       <header>
         <a href="/register">Register</a>
         <a href="/login">Log In</a>
+        <a href="/newEvent">Create an Event</a>
       </header>
     </body>
 </html>
