--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,8 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>Home</title>
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='home.css') }}">
     </head>
     <body>
       <h1> Sports Eventer </h1>
@@ -11,7 +13,11 @@
       </header>
 
       {% for event in events %}
-        <p>{{ event.sport }}</p>
+      <div id="event">
+        <h3>Sport: {{ event.sport }}</h3>
+        <p>People: {{ event.people_participating }}/{{ event.people_participating+event.people_needed }}</p>
+        <a href="/events/{{event.event_id}}">See more details</a>
+      </div>
       {% endfor %}
     </body>
 </html>
