--- a/templates/newEvent.html
+++ b/templates/newEvent.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>Create an Event</title>
@@ -8,12 +9,18 @@
           <button type="button" onclick="window.location='/'">Home</button>
       </header>
       <form action="/newEvent" method="post">
-          <label>Sport:</label>                 <input type="text" name="sport"><br>
-          <label>People participating:</label>  <input type="number" name="people_participating"><br>
-          <label>People needed:</label>         <input type="number" name="people_needed"><br>
+          <label>Sport:</label>
+          <select name="sport">
+            <option value="football">Football</option>
+            <option value="basketball">Basketball</option>
+            <option value="volleyball">Volleyball</option>
+            <option value="tennis">Tennis</option>
+          </select><br>
+          <label>People participating:</label>  <input type="number" name="people_participating" required><br>
+          <label>People needed:</label>         <input type="number" name="people_needed" required><br>
           <label>Date & Time:</label>           <input type="text" name="date_time"><br>
           <label>Location:</label>              <input type="text" name="location"><br>
-          <label>Price per person:</label>      <input type="number" name="price"><br>
+          <label>Price per person:</label>      <input type="number" name="price" required><br>
           <label>Short description:</label>     <input type="text" name="description"><br><br>
           <input type="submit" value="Submit">
       </form>
