--- a/templates/edit_event.html
+++ b/templates/edit_event.html
@@ -8,14 +8,8 @@
       <header>
           <button type="button" onclick="window.location='/'">Home</button>
       </header>
+      <h3>Sport: {{event.sport}}</h3>
       <form action="/events/{{ event.event_id }}/edit" method="post">
-          <label>Sport:</label>
-          <select name="sport">
-            <option value="football">Football</option>
-            <option value="basketball">Basketball</option>
-            <option value="volleyball">Volleyball</option>
-            <option value="tennis">Tennis</option>
-          </select><br>
           <label>People participating:</label>  <input type="number" name="people_participating" value="{{event.people_participating}}" required><br>
           <label>People needed:</label>         <input type="number" name="people_needed" value="{{event.people_needed}}" required><br>
           <label>Date & Time:</label>           <input type="text" name="date_time" value="{{event.date_time}}"><br>
