Structured the final design for Milestone 1.

--- a/templates/event.html
+++ b/templates/event.html
@@ -11,7 +11,7 @@
       </header>
 
       <div>
-        <h3>Sport: {{event.sport}}</h3>
+        <h3>{{event.created_by}}'s {{event.sport}} event</h3>
         <p>Participating: {{event.people_participating}}</p>
         <p>Free Places: {{event.people_needed}}</p>
         <p>Date & Time: {{event.date_time}}</p>
