--- a/templates/home.html
+++ b/templates/home.html
@@ -21,7 +21,7 @@
 
       {% for event in events %}
       <div id="event">
-        <h3>Sport: {{ event.sport }}</h3>
+        <h3>{{event.created_by}}'s {{event.sport}} event</h3>
         <p>People: {{ event.people_participating }}/{{ event.people_participating+event.people_needed }}</p>
         <a href="/events/{{event.event_id}}">See more details</a>
       </div>
