Now receivinig date&time in the correct input fields.

--- a/templates/event.html
+++ b/templates/event.html
@@ -14,7 +14,8 @@
         <h3>{{event.created_by}}'s {{event.sport}} event</h3>
         <p>Participating: {{event.people_participating}}</p>
         <p>Free Places: {{event.people_needed}}</p>
-        <p>Date & Time: {{event.date_time}}</p>
+        <p>Date: {{event.date}}</p>
+        <p>Time: {{event.time}}</p>
         <p>Location: {{event.location}}</p>
         <p>Price per person: {{event.price}}</p>
         <p>Description: {{event.description}}</p>
