--- a/templates/home.html
+++ b/templates/home.html
@@ -13,7 +13,7 @@
               <a href="/login">Log In</a>
           {% else %}
               <a href="/logout">Log out</a>
-              <a href="/myprofile">My Profile</a>
+              <a href="/myProfile">My Profile</a>
               <a href="/newEvent">Create an Event</a>
           {% endif %}
       {% endblock content %}
