--- a/templates/register.html
+++ b/templates/register.html
@@ -1,4 +1,4 @@
-<!DOCOTYPE html>
+<!DOCTYPE html>
 <html lang=eng>
   <head>
     <title>Register</title>
@@ -14,4 +14,3 @@
     </form>
   </body>
 </html>
-
