--- a/templates/edit_event.html
+++ b/templates/edit_event.html
@@ -12,7 +12,8 @@
       <form action="/events/{{ event.event_id }}/edit" method="post">
           <label>People participating:</label>  <input type="number" name="people_participating" value="{{event.people_participating}}" required><br>
           <label>People needed:</label>         <input type="number" name="people_needed" value="{{event.people_needed}}" required><br>
-          <label>Date & Time:</label>           <input type="text" name="date_time" value="{{event.date_time}}"><br>
+          <label>Date:</label>                  <input type="date" name="date" value="{{event.date}}"><br>
+          <label>Time:</label>                  <input type="time" name="time" value="{{event.time}}"><br>
           <label>Location:</label>              <input type="text" name="location" value="{{event.location}}"><br>
           <label>Price per person:</label>      <input type="number" name="price" value="{{event.price}}" required><br>
           <label>Short description:</label>     <input type="text" name="description" value="{{event.description}}"><br><br>
