--- a/templates/newEvent.html
+++ b/templates/newEvent.html
@@ -18,7 +18,8 @@
           </select><br>
           <label>People participating:</label>  <input type="number" name="people_participating" required><br>
           <label>People needed:</label>         <input type="number" name="people_needed" required><br>
-          <label>Date & Time:</label>           <input type="text" name="date_time"><br>
+          <label>Date:</label>                  <input type="date" name="date"><br>
+          <label>Time:</label>                  <input type="time" name="time"><br>
           <label>Location:</label>              <input type="text" name="location"><br>
           <label>Price per person:</label>      <input type="number" name="price" required><br>
           <label>Short description:</label>     <input type="text" name="description"><br><br>
