Added css to the home page.

--- a/templates/home.html
+++ b/templates/home.html
@@ -35,6 +35,7 @@
       <div id="event">
         <h3>{{event.created_by}}'s {{event.sport}} event</h3>
         <p>People: {{ event.people_participating }}/{{ event.people_participating+event.people_needed }}</p>
+        <p>Date & Time: {{event.date}} - {{event.time}}</p>
         <a href="/events/{{event.event_id}}">See more details</a>
       </div>
       {% endfor %}
