--- a/static/home.css
+++ b/static/home.css
@@ -1,4 +1,49 @@
+h1{
+  font-family: 'Brush Script MT', cursive;
+  margin-bottom: 40px;
+  padding-bottom: 5px;
+  padding-left: 10px;
+  border-bottom: 3px solid blue;
+}
+
 #event{
   border-style: solid;
+  background-color: grey;
+  margin-top: 10px;
   margin-bottom: 10px;
+}
+
+#event > a{
+  font-family: sans-serif;
+  text-decoration: none;
+  font-weight: bolder;
+  color: white;
+  border-radius: 12px;
+  border: 2px solid #003399;
+  background-color: #0066cc;
+  position: relative;
+  margin-left: 80vw;
+  top: -3vh;
+  padding: 8px;
+}
+
+#event > a:hover{
+  color: #0066cc;
+  background-color: white;
+}
+
+header > a{
+  font-family: sans-serif;
+  text-decoration: none;
+  font-weight: bolder;
+  color: black;
+  border-radius: 12px;
+  border: 2px solid #db8b72;
+  background-color: #f0ac97;
+  padding: 5px;
+}
+
+header > a:hover{
+  color: #f0ac97;
+  background-color: black;
 }
