--- a/templates/login.html
+++ b/templates/login.html
@@ -10,8 +10,10 @@
 			</br>			
 			<input name = "user" type = "text"/><br>
 			<label>Password</label>
-			</br>			
+			</br>
 			<input name = "pwd" type = "password"/><br>
+			<input type = "checkbox" name = "remember_user" value  = "remember">
+			<label>Remember me</label><br>
 			<input type = "submit" name = "login_button" value = "Log in">
 		</form>
 	</body>
