--- a/templates/event.html
+++ b/templates/event.html
@@ -7,8 +7,19 @@
     <body>
       <h1> Sports Eventer </h1>
       <header>
-
+        <button type="button" onclick="window.location='/'">Home</button>
       </header>
+
+      {% with messages = get_flashed_messages() %}
+        {% if messages %}
+          <ul class=flashes>
+            {% for message in messages %}
+              <li>{{ message }}</li>
+            {% endfor %}
+          </ul>
+        {% endif %}
+      {% endwith %}
+
 
       <div>
         <h3>{{event.created_by}}'s {{event.sport}} event</h3>
