--- a/templates/newEvent.html
+++ b/templates/newEvent.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Create an Event</title>
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='event.css') }}">
     </head>
     <body>
       <h1> Sports Eventer </h1>
@@ -29,7 +30,7 @@
           </select><br>
           <label>People participating:</label>  <input type="number" name="people_participating" class="req" required><br>
           <label>People needed:</label>         <input type="number" name="people_needed" class="req" required><br>
-          <label>Date:</label>                  <input type="date" name="date"><br>
+          <label>Date:</label>                  <input type="date" name="date">
           <label>Time:</label>                  <input type="time" name="time" ><br>
           <label>Location:</label>              <input type="text" name="location" class="req" required><br>
           <label>Price per person:</label>      <input type="number" name="price" class="req" required><br>
