Changed up files names to be more conventional.

--- a/templates/newEvent.html
+++ b/templates/newEvent.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Create an Event</title>
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='event.css') }}">
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='newEvent.css') }}">
     </head>
     <body>
       <h1> Sports Eventer </h1>
