--- a/templates/myProfile.html
+++ b/templates/myProfile.html
@@ -3,6 +3,10 @@
     <head>
         <title>Home</title>
     </head>
+    <header>
+      <button type="button" onclick="window.location='/'">Home</button>
+      <a href="/myProfile/{{user.user_id}}/edit">Edit Profile</a>
+    </header>
     <body>
       <h1> Sports Eventer </h1>
       <header>
