--- a/templates/home.html
+++ b/templates/home.html
@@ -13,6 +13,7 @@
             $.each(allEvents, function(i, item){
               var str = '<tr id="'+item.event_id+'">"';
               var btn = '<button id="btn_'+item.event_id+'">Details</button>';
+              var btn_join = '<button id="btn_join_'+item.event_id+'">Join Event</button>';
               var tr = $(str).append(
                 $('<td class="event_id">').text(item.event_id),
                 $('<td class="created_by">').text(item.created_by + "'s "),
@@ -24,7 +25,8 @@
                 $('<td class="loacation"            hidden>').text("Location: " + item.location),
                 $('<td class="price"                hidden>').text("Price: " + item.price),
                 $('<td class="description"          hidden>').text("Description: " + item.description),
-                $('<td class="button">').append(btn)
+                $('<td class="button">').append(btn),
+                $('<td class="button_join">').append(btn_join)
               );
               $("table").append(tr);
 
@@ -38,8 +40,23 @@
                 $("#"+item.event_id+" > .price").toggle();
                 $("#"+item.event_id+" > .description").toggle();
               })
+
+              $("#btn_join_"+item.event_id).click(function(){
+                console.log("Join Button" + item.event_id + " was pressed");
+                $.ajax({
+                  url: "http://localhost:5000/rest/events/join?event_id=" + item.event_id,
+                  dataType: "json",
+                  type: "GET",
+                  success: function(){
+                    alert("KRISKO");
+                  }
+                })
+              })
+
             })
           }
+
+
 
 
           function getData(){
