--- a/templates/home.html
+++ b/templates/home.html
@@ -45,7 +45,7 @@
                 console.log("Join Button" + item.event_id + " was pressed");
                 console.log(allEvents[i].people_participating);
 
-                if(allEvents[i].people_participating >= allEvents[i].people_needed){
+                /*if(allEvents[i].people_participating >= allEvents[i].people_needed){
                   alert("YOU CANNOT JOIN THIS EVENT, BECAUSE IT IS FULL!");
                 } else {
                   $.ajax({
@@ -55,7 +55,7 @@
                     async: false
                   });
                   location.reload();
-                }
+                }*/
 
               })
             })
