--- a/templates/register.html
+++ b/templates/register.html
@@ -5,10 +5,40 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     <script type="text/javascript">
+    let data;
+
+      function isUsernameRegistered(username){
+        let deferred = $.Deferred();
+        $.ajax({
+          url: "http://localhost:5000/rest/users?username=" + username,
+          dataType: "json",
+          type: "GET",
+          success: function(result){
+            data = result;
+            deferred.resolve();
+          }
+        });
+        return deferred.promise();
+      }
+
+
       $(document).ready(function(){
         $('#sign_button').click(function(){
-          $(".error").hide();
           var hasError = false;
+
+          var usernameVal = $("#username").val();
+          var usernameFree = true;
+          $.when(isUsernameRegistered(usernameVal)).done(function(){
+            console.log(data["nameFree"]);
+
+            if(data["nameFree"] == 0){
+              $("#username").after('<span class="error">This username is already taken.</span>');
+              console.log("USERNAME IS TAKEN");
+              hasError = true;
+            }
+          });
+
+          $(".error").hide();
           var emailReg = /^([\w-\.]+@([\w-]+\.)+[\w-]{2,4})?$/;
 
           var emailVal = $("#email").val();
