Edit Event now works and has a validation process!

--- a/templates/home.html
+++ b/templates/home.html
@@ -54,6 +54,7 @@
                     type: "PUT",
                     async: false
                   });
+                  alert("YOU SUCCESSFULLY JOINED " + allEvents[i].created_by + "'s " + allEvents[i].sport + " EVENT!");
                   location.reload();
                 }
 
