--- a/static/home.css
+++ b/static/home.css
@@ -1,9 +1,41 @@
+body{
+  display: flex;
+  overflow: auto;
+  flex-direction: column;
+  margin: 0;
+  min-height: 100vh;
+  background-image: url(images/background.jpg);
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 h1{
-  font-family: 'Brush Script MT', cursive;
-  margin-bottom: 40px;
-  padding-bottom: 5px;
-  padding-left: 10px;
-  border-bottom: 3px solid blue;
+  text-align: center;
+  color: #222;
+  margin-top: -3%;
+  margin-bottom: 10px;
+}
+
+.container{
+  flex:1;
+}
+
+.content{
+  background-color:rgba(255,255,255,.8);
+  border-radius:.25em;
+  box-shadow:0 0 .25em rgba(0, 0, 0, 0.25);
+  box-sizing:border-box;
+  left:50%;
+  padding: 5vmin 10vmin;
+  position: absolute;
+  text-align: center;
+  top:50%;
+  transform:translate(-50%, -50%);
+  height: 70%;
+  width: 50%;
+  overflow: auto;
 }
 
 #event{
@@ -46,4 +78,32 @@ header > a{
 header > a:hover{
   color: #f0ac97;
   background-color: black;
+}
+
+#events {
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+#events td, #events th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+
+#events tr:hover {background-color: #ddd;}
+
+#events tr{
+  background-color: #f2f2f2;
+  font-size: 18px;
+}
+
+#events th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: center;
+  background-color: #222;
+  color: #9d9d9d;
+  font-size: 20px;
 }
