--- a/static/register.css
+++ b/static/register.css
@@ -11,12 +11,12 @@ body{
   background-size: cover;
 }
 
-
 h1 {color: #222; margin-top: -20px; margin-bottom: 20px;}
+
 label {
   color: #222;
   font-weight: 700;
-  font-size: 13px;
+  font-size: 15px;
 }
 
 .content{
@@ -30,46 +30,31 @@ label {
   text-align: center;
   top:50%;
   transform:translate(-50%, -50%);
-  height: 80%;
-  width: 50%;
-  overflow: auto;
+  height: 42%;
+  width: 35%;
 }
 
-#submit_button{
-    background-color: #222;
-    border: 1px solid #222;
-    color: #9d9d9d;
-    border-radius: 5px;
-    width: 40%;
-    height: 15%;
-    font-size: 30px;
-}
 
-#submit_button:hover{
-    background-color: #222;
-    color: white;
+input {
+  font-size: 18px;
+  width: 90%
 }
 
 .group{
     margin-bottom: 15px;
 }
 
-input{
-    font-size: 15px;
+#sign_button{
+  background-color: #222;
+  border: 1px solid #222;
+  color: #9d9d9d;
+  border-radius: 5px;
+  width: 40%;
+  height: 15%;
+  font-size: 30px;
 }
 
-textarea {
-  width: 100%;
-  height: 150px;
-  padding: 12px 20px;
-  box-sizing: border-box;
-  border: 2px solid #ccc;
-  border-radius: 4px;
-  background-color: #f8f8f8;
-  font-size: 15px;
-  resize: none;
-}
-
-#location {
-  width: 100%;
+#sign_button:hover{
+  background-color: #222;
+  color: white;
 }
