--- a/static/myProfile.css
+++ b/static/myProfile.css
@@ -1,7 +1,83 @@
-table{
-  border: 3px solid black;
+body{
+  display: flex;
+  overflow: auto;
+  flex-direction: column;
+  margin: 0;
+  min-height: 100vh;
+  background-image: url(images/background.jpg);
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-th, td{
-  border: 1px solid black;
+label {
+  color: #222;
+  font-weight: 700;
+  font-size: 18px;
+}
+
+.container{
+  flex:1;
+}
+
+.content{
+  background-color:rgba(255,255,255,.8);
+  border-radius:.25em;
+  box-shadow:0 0 .25em rgba(0, 0, 0, 0.25);
+  box-sizing:border-box;
+  left:50%;
+  padding: 5vmin 10vmin;
+  position: absolute;
+  text-align: center;
+  top:50%;
+  transform:translate(-50%, -50%);
+  height: 70%;
+  width: 75%;
+  overflow: auto;
+}
+
+
+#events {
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+#events td, #events th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+
+#events tr:hover {background-color: #ddd;}
+
+#events tr{
+  background-color: #f2f2f2;
+  font-size: 18px;
+}
+
+#events th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: center;
+  background-color: #222;
+  color: #9d9d9d;
+  font-size: 20px;
+}
+
+#edit_profile {
+  font-size: 28px;
+  color: #9d9d9d; 
+  background-color: #222;
+  border: 2px solid #222; 
+  border-radius: 4px; 
+  margin-right:15px; 
+  margin-left:15px; 
+  padding: 10px; 
+  text-decoration: none
+}
+
+#edit_profile:hover {
+  color: white;
 }
